<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_nutrient"
            android:icon="@drawable/ic_menu_nutrient"
            android:title="@string/menu_nutrient" />
        <item
            android:id="@+id/nav_child"
            android:icon="@drawable/ic_menu_child"
            android:title="@string/menu_child" />

        <!--       <item
                   android:id="@+id/nav_gallery"
                   android:icon="@drawable/ic_menu_gallery"
                   android:title="@string/menu_gallery" />
               <item
                   android:id="@+id/nav_slideshow"
                   android:icon="@drawable/ic_menu_slideshow"
                   android:title="@string/menu_slideshow" />
               <item
                   android:id="@+id/nav_tools"
                   android:icon="@drawable/ic_menu_manage"
                   android:title="@string/menu_tools" />-->

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_guide"
                android:title="@string/menu_guide" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_policy"
                android:title="@string/menu_policy" />
        </menu>
    </item>

</menu>
